syntax = "proto3";

package algebraic;

service Algebraic {
  // Exponent
  rpc Exponent (ExponentMessage) returns (FloatResponse);
  // Factorial
  rpc Factorial (FactorialMessage) returns (IntegerResponse);
}

// Input -----------------------------------------------------------------------------------------------------------------

message ExponentMessage {
  float base = 1;
  uint32 exponent = 2;
}

message FactorialMessage {
  uint32 value = 1;
}

// Output -----------------------------------------------------------------------------------------------------------------

message IntegerResponse {
  uint64 value = 1;
}

message FloatResponse {
  float value = 1;
}